# onstep-python

./: README.md  pyproject.toml  test.ipynb
src/lx200/: onstep.py
src/lx200/transport/: sock.py  transport.py  tty.py
